# stm32h743motor

./: .clang-format  .cproject  .gitignore  .project  CMakeLists.txt  README.md  STM32H743IITX_FLASH.ld  build.sh  format.sh  pin_assign.xlsx  stm32h743motor.ioc
Core/: .gitignore
Core/Inc/: main.h
Core/Src/: stm32h7xx_it.c
USB_DEVICE/: .gitignore
USB_DEVICE/App/: usbd_cdc_if.c
User/message/: msgdef.h  msglib.cpp  msglib.h
User/task/: adcTask.cpp  appTask.cpp  keyTask.cpp  usbTask.cpp
